# book_app

./: .gitignore  README.md  pyproject.toml
src/: server.py
src/models/: Book.py  BookRequest.py  DynamoBook.py
src/routers/: books.py
