[tool.poetry]
name = "book-app"
version = "0.1.0"
description = ""
authors = ["Ryan Ratcliff <ryanrratcliff@gmail.com>"]
readme = "README.md"
packages = [{include = "book_app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.101.1"
uvicorn = "^0.23.2"
black = "^23.7.0"
pynamodb = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
